Update notebook format

--- a/lectures/python_fundamentals.ipynb
+++ b/lectures/python_fundamentals.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "60a3b957-6cbf-47cc-9d4a-010741e14b07",
+   "metadata": {},
+   "source": [
+    "# Python Fundamentals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "87782f60-653a-4273-9ebf-7d80feb42ba0",
    "metadata": {},
    "source": [
-    "# Basic Variables"
+    "## Basic Variables"
    ]
   },
   {
@@ -212,7 +220,7 @@
    "id": "0936f714-da40-477f-8561-d9cb8e4da8fb",
    "metadata": {},
    "source": [
-    "# Math"
+    "## Math"
    ]
   },
   {
@@ -461,7 +469,7 @@
    "id": "cc8cb667-8a17-49f1-9e3a-4d98b3a70101",
    "metadata": {},
    "source": [
-    "# Conditionals"
+    "## Conditionals"
    ]
   },
   {
@@ -571,7 +579,7 @@
    "id": "300da854-bf43-48a7-ac10-d66e6d11c305",
    "metadata": {},
    "source": [
-    "# More Flow Control"
+    "## More Flow Control"
    ]
   },
   {
@@ -697,7 +705,7 @@
    "id": "56cdbe3c-9fa6-4d42-b6d6-0860381275e3",
    "metadata": {},
    "source": [
-    "# Lists"
+    "## Lists"
    ]
   },
   {
@@ -875,7 +883,7 @@
    "id": "fac06eb4-739e-44c5-9f3b-00defbd08536",
    "metadata": {},
    "source": [
-    "# Forcing Types"
+    "## More on Types"
    ]
   },
   {
@@ -1006,9 +1014,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31888b56-c4b2-4cb7-a750-5a42c479c114",
+   "metadata": {},
+   "source": [
+    "## Tuples"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4016b23-94a1-4331-b55e-2fec8eb18b50",
+   "id": "876ebed0-b714-4f65-a5c5-9c2a98cd8388",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "732fec78-989a-44ad-97ea-2c5477c79800",
+   "metadata": {},
+   "source": [
+    "## Dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daef9441-45b6-4f36-993c-f86d96166361",
    "metadata": {},
    "outputs": [],
    "source": []
